--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
     </header>
-    <section class="">
+    <section class="first__section">
       <div class="first_section_text">
         <h2 class="text_header">Work at the speed of thought</h2>
         <h3 class="text_preheader">
